--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-329.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1011.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 167.88.61.175, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 167.88.61.175, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-16.80MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇸🇬 新加坡-1.55MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-747.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.35MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-242.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-329.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1011.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-179.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-242.5KB/s(Youtube:不良林)
